# mct-test-u-lpau-mct-test-user

./: .env.example  .gitignore  .plan  Cargo.toml  PRODUCT.md  README.md
crates/ai/: Cargo.toml
crates/ai/src/: content_safety.rs  lib.rs
crates/ai/tests/fixtures/: content-safety-clean.json  content-safety-empty.txt  content-safety-malformed.txt
crates/browser/: Cargo.toml
crates/browser/src/: accessibility.rs  axe.rs  lib.rs  session.rs
crates/browser/tests/fixtures/: axe-violations.json
crates/core/: Cargo.toml
crates/core/src/: enums.rs  lib.rs  models.rs  scoring.rs  validation.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  lib.rs  repository.rs
crates/storage/tests/: repository.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
migrations/: 0001_init.sql  0002_content_safety_skipped.sql
scripts/: sqlx-migrate.sh
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/app/: providers.tsx
web/src/components/ui/: button.tsx
web/src/lib/api/: client.ts  hooks.ts  types.ts
web/tests/e2e/: dashboard.spec.ts
web/tests/e2e/fixtures/site/: index.html
