[package]
name = "zeroclaw-browser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chromiumoxide.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
