[package]
name = "zeroclaw-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroclaw-ai = { path = "../ai" }
zeroclaw-core = { path = "../core" }
zeroclaw-storage = { path = "../storage" }
zeroclaw-worker = { path = "../worker" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serial_test = "3"
serde_json = "1"
sqlx.workspace = true
zeroclaw-browser = { path = "../browser" }
