[package]
name = "zeroclaw-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroclaw-ai = { path = "../ai" }
zeroclaw-browser = { path = "../browser" }
zeroclaw-core = { path = "../core" }
zeroclaw-storage = { path = "../storage" }
zeroclaw-worker = { path = "../worker" }
url.workspace = true

[dev-dependencies]
serial_test = "3"
serde_json = "1"
sqlx.workspace = true
